--- a/StackOverFlowProject/StackOverFlowProject.csproj
+++ b/StackOverFlowProject/StackOverFlowProject.csproj
@@ -145,6 +145,10 @@
       <Project>{9969e1bc-824e-4ca5-96a8-9097fd599527}</Project>
       <Name>StackOverflow.DomainModel</Name>
     </ProjectReference>
+    <ProjectReference Include="..\stackOverflow.ViewModels\stackOverflow.ViewModels.csproj">
+      <Project>{853c13ed-6e4e-4cc9-9922-1cc6f47e5d7e}</Project>
+      <Name>stackOverflow.ViewModels</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
