--- a/stackOverflow.ViewModels/stackOverflow.ViewModels.csproj
+++ b/stackOverflow.ViewModels/stackOverflow.ViewModels.csproj
@@ -51,14 +51,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnswersViewModel.cs" />
+    <Compile Include="EditAnswerViewModel.cs" />
+    <Compile Include="EditQuestionViewModel.cs" />
     <Compile Include="CategoriesViewModel.cs" />
     <Compile Include="EditUserPassword.cs" />
     <Compile Include="EditUserViewModel.cs" />
     <Compile Include="LoginViewModel.cs" />
+    <Compile Include="NewAnswerViewModel.cs" />
     <Compile Include="NewQuestionViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionViewModel.cs" />
     <Compile Include="RegisterViewModel.cs" />
     <Compile Include="UserViewModel.cs" />
+    <Compile Include="VoteViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
