--- a/StackOverflow.ServiceLayer/StackOverflow.ServiceLayer.csproj
+++ b/StackOverflow.ServiceLayer/StackOverflow.ServiceLayer.csproj
@@ -54,7 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MapperExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SHA256HashGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StackOverflow.DomainModel\StackOverflow.DomainModel.csproj">
