--- a/StackOverflow.ServiceLayer/StackOverflow.ServiceLayer.csproj
+++ b/StackOverflow.ServiceLayer/StackOverflow.ServiceLayer.csproj
@@ -57,6 +57,7 @@
     <Compile Include="MapperExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SHA256HashGenerator.cs" />
+    <Compile Include="UsersService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StackOverflow.DomainModel\StackOverflow.DomainModel.csproj">
