Implemented Budling and minification

--- a/StackOverFlowProject/bin/StackOverFlowProject.dll.config
+++ b/StackOverFlowProject/bin/StackOverFlowProject.dll.config
@@ -63,7 +63,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -80,7 +80,6 @@
   </entityFramework>
   
 <connectionStrings>
-<add name="StackeOverflowDBContext" connectionString="data source=localhost; server=REVIVAL-PC\SQLEXPRESS; user id=revival-PC\shashank; 
-initial catalog=StackOverFlowDatabase; integrated security=SSPI; persist security info=False" providerName="System.Data.SqlClient" />
+<add name="StackeOverflowDBContext" connectionString="data source=localhost; server=REVIVAL-PC\SQLEXPRESS; user id=revival-PC\shashank;  initial catalog=StackOverFlowDatabase; integrated security=SSPI; persist security info=False" providerName="System.Data.SqlClient" />
 </connectionStrings>
 </configuration>
