created partial view for index tr

--- a/StackOverFlowProject/StackOverFlowProject.csproj
+++ b/StackOverFlowProject/StackOverFlowProject.csproj
@@ -280,6 +280,7 @@
     <Content Include="Views\Shared\_LayoutPage1.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\Question.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
