--- a/StackOverFlowProject/StackOverFlowProject.csproj
+++ b/StackOverFlowProject/StackOverFlowProject.csproj
@@ -289,6 +289,10 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Account\ChangeProfile.cshtml" />
+    <Content Include="Views\Account\ChangePassword.cshtml" />
+    <Content Include="Views\Account\Categories.cshtml" />
+    <Content Include="Views\Home\Questions.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
